@@ -16,9 +16,6 @@ PROGRAM phcg
   USE check_stop,    ONLY: check_stop_init
   USE mp_global,     ONLY: mp_startup, mp_global_end
   USE environment,   ONLY: environment_start
-  ! The following instruction is just to make it clear that all modules
-  ! from PWscf are needed sooner or later
-  USE pwcom          
   USE cgcom
 
   IMPLICIT NONE
