@@ -37,7 +37,8 @@ Fixed in svn version
 
 Incompatible changes in svn version:
 
-  * module pwcom no longer contains modules gvect, gvecs
+  * module pwcom no longer contains modules gvect, gvecs, references to
+    some variables in modules constants, cell_base
   * The new xml format with schema is now the default. Use configure option
     "--disable-xml", or add -D__OLDXML to MANUAL_FLAGS in make.inc, to revert
     to the old xml format
